# crappywraps

./: README.md  ghrel.sh  patchpaths.sh
blake2/: blake2.wrap
blake2/BLAKE2-20160619/: meson.build
lz4/: lz4.wrap
lz4/lz4-1.8.3/: meson.build
lz4/lz4-1.9.1/: meson.build  meson_options.txt
lz4/lz4-1.9.2/: meson.build
rdkafka/: lz4.wrap  rdkafka.wrap  zlib.wrap  zstd.wrap
rdkafka/librdkafka-1.0.1/: meson.build
rdkafka/librdkafka-1.0.1/meson/: lz4.wrap
rdkafka/librdkafka-1.4.0/: meson.build
readline/: readline.wrap
readline/readline-6.3/: meson.build
readline/readline-6.3/readline/: meson.build
tinyxml/: tinyxml.wrap
tinyxml/tinyxml/: meson.build
yajl/: yajl.wrap
yajl/yajl-2.1.0/: meson.build
yajl/yajl-2.1.0/yajl/: meson.build
